# part_renderer

./: Cargo.toml  README.md  TODO.md  cube_corner.stl  plane.stl
mesh/src/: lib.rs  triangle.rs
part_renderer_cli/: Cargo.toml
part_renderer_cli/src/: config.rs  error.rs  (+1 more)
renderer/: Cargo.toml  README.md  TODO.md
renderer/src/: demo.rs  lib.rs  main.rs  scene.rs  test.rs  triangle.rs
renderer/src/bsdf/: bxdf.rs  fresnel.rs  geometry.rs  lambertian.rs  mod.rs  oren_nayar.rs  scale.rs
renderer/src/camera/: orthographic.rs
renderer/src/color/: mod.rs  rgb.rs  rgba.rs  xyza.rs
renderer/src/film/: mod.rs  tile.rs
renderer/src/filter/: mitchell.rs
renderer/src/geometry/: bounds.rs  mod.rs  point.rs  transform.rs  vector.rs
renderer/src/integrator/: mod.rs  whitted.rs
renderer/src/interaction/: mod.rs
renderer/src/light/: mod.rs  point.rs  visibility.rs
renderer/src/material/: mod.rs
renderer/src/number/: efloat.rs
renderer/src/primitive/: aggregate.rs  mod.rs
renderer/src/sampler/: constant.rs  pixel.rs  stratified.rs
renderer/src/shape/: mod.rs
renderer/src/shape/mesh/: triangle.rs
renderer/src/simple/: material.rs  mod.rs  primitive.rs  ray_tracer.rs  scene.rs
renderer_cli/: Cargo.toml
resources/: bunny_config.ron  config.ron
src/: bounding_box.rs  bvh.rs  camera.rs  camera1.rs  color.rs  demo.rs  efloat.rs  film.rs  filter.rs  integrator.rs  interaction.rs  intersection.rs  light.rs  main.rs  material.rs  material_v1.rs  materials.rs  medium.rs  primitive.rs  ray.rs  scene.rs  shape.rs  test.rs  texture.rs  vector.rs  world.rs
(+68 files in other folders)
