[package]
name = "rtc"
version = "0.1.0"
authors = ["Patrick Sullivan <patrick.sullivan@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
image = "0.23.14"
nom_stl = "0.2.2"
typed-arena =  "2"
