[package]
name = "renderer"
version = "0.1.0"
authors = ["Patrick Sullivan <patrick.sullivan@hey.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
bvh = "0.5.0"
cgmath = "0.18"
float_next_after = "0.1.5"
image = "0.23.14"
mesh = { path = "../mesh" }
nom_stl = "0.2.2"
rand = "0.8.0"
rand_chacha = "0.3.1"
rayon = "1.5"
typed-arena =  "2"

[lib]
name = "renderer"
path = "src/lib.rs"

[[bin]]
name = "renderer_demo"
path = "src/demo.rs"